# MatrixCalculator

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/matrixcalculator/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  matrix_operations.cpp
app/src/main/java/com/example/matrixcalculator/: DisplayComposables.kt  InputComposables.kt  MainActivity.kt  MainScreen.kt  MatrixCalculatorBridge.kt  MatrixState.kt  OperationComposables.kt  StateDefinitions.kt
app/src/main/java/com/example/matrixcalculator/ui/theme/: Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/matrixcalculator/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
